# hyperspace

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
docs/: contamination_tests.md
hyperagents/: __init__.py  agent.py  code_agent.py  metrics.py  population.py  strategy.py  tasks.py
replication/: README.md  eval_progress.py  experiment_plan.md  generate_loop.py  run.py  task_agent.py  task_agent_handcrafted.py
replication/agent/tools/: registry.py
replication/data/: prepare.py
replication/evaluation/: harness.py  report.py
tests/: conftest.py  test_agent.py  test_code_agent.py  test_population.py  test_strategy.py
transfer_experiment/: README.md  analysis_output.txt  analyze_efficiency.py  analyze_patterns.py  analyze_runs.py  eval_progress.py  findings.md  mark_loop.py  mark_tools.py  pattern_analysis.txt  run_shared.py
transfer_experiment/initial_agent/: meta_agent.py
transfer_experiment/initial_agent/agent/: agentic_loop.py
transfer_experiment/results/claude_vs_kimi-k2p5/seed42/: markspace_telemetry.jsonl
transfer_experiment/results/claude_vs_kimi-k2p5/seed44/: markspace_telemetry.jsonl
transfer_experiment/results/kimi-k2p5_vs_gpt-oss-120b/seed42/: markspace_telemetry.jsonl
transfer_experiment/results/kimi-k2p5_vs_gpt-oss-120b/seed43/: markspace_telemetry.jsonl
transfer_experiment/results/kimi-k2p5_vs_gpt-oss-120b/seed44/: markspace_telemetry.jsonl
(+30298 files in other folders)
